// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component 1`] = `
<div
  className="document-content"
  id="document-content___MainDocument"
/>
`;

exports[`component 2`] = `
<div
  className="document-content"
  id="document-content___MainDocument"
>
  <div>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Page <b>text<b>.",
        }
      }
    />
  </div>
</div>
`;

exports[`snapshot 1`] = `
<div
  className="document-content"
  id="document-content___MainDocument"
>
  <h1>
    Page loaded.
  </h1>
</div>
`;
